<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Clock Learning</string>
    <string name="submit">Проверим!</string>
    <string name="message">Переведи стрелки часов на:</string>
    <string name="start_hour">12</string>
    <string name="start_minute">00</string>
    <string name="right">Верно</string>
    <string name="wrong">Неверно, попробуй еще раз</string>
    <string name="dots">:</string>
</resources>
